--- a/history/rules/r1.md
+++ b/history/rules/r1.md
@@ -4,61 +4,61 @@
 
 ### 纪律篇
 
-1.  未戴口罩 或 未携带通行证 -1
-2.  讲话 -2 (注:讨论问题去外面,并且声音不可过大;收交作业保持安静;特殊情况除外。)
-3.	迟到(以学校铃落为准) -2
-4.	早退 -2
-5.	晨读或早自习不认真 -2
-6.	携带食品(非奶茶饮品和无异味水果除外) -3
-7.	上课吃东西	-3
-8.	顶撞老师 -5
-9.	顶撞班委 -2
-10.	作业未完成 或 作业态度不端正 -(3~5)
-11.	不做或不认真做眼保健操 -2
-12.	上课被老师批评 -3
-13.	旷课(含请假未向副班长报告;向老师请假返校后应补请假条。) -2
-14.	晚餐时间或晚上放学后未打凳子 -1
-15.	上课30s内未回到座位 -1
-16.	值日生未认真执行上一条 -2
-17.	上课睡觉 -3
+1. 未戴口罩 或 未携带通行证 -1
+2. 讲话 -2 (注:讨论问题去外面,并且声音不可过大;收交作业保持安静;特殊情况除外。)
+3. 迟到(以学校铃落为准) -2
+4. 早退 -2
+5. 晨读或早自习不认真 -2
+6. 携带食品(非奶茶饮品和无异味水果除外) -3
+7. 上课吃东西 -3
+8. 顶撞老师 -5
+9. 顶撞班委 -2
+10. 作业未完成 或 作业态度不端正 -(3~5)
+11. 不做或不认真做眼保健操 -2
+12. 上课被老师批评 -3
+13. 旷课(含请假未向副班长报告;向老师请假返校后应补请假条。) -2
+14. 晚餐时间或晚上放学后未打凳子 -1
+15. 上课30s内未回到座位 -1
+16. 值日生未认真执行上一条 -2
+17. 上课睡觉 -3
 
 ### 卫生篇
 
-1.	未进行日常小扫除(含教寝室和公共区) -3 (注:组内调整需报告劳动委员或寝室长)
-2.	卫生未打扫干净 -2
-3.	大扫除擅自离岗 -3
-4.	把垃圾放在地上 -1/天
+1. 未进行日常小扫除(含教寝室和公共区) -3 (注:组内调整需报告劳动委员或寝室长)
+2. 卫生未打扫干净 -2
+3. 大扫除擅自离岗 -3
+4. 把垃圾放在地上 -1/天
 
 ### 奖励篇
 
-1.  申请星期天下午在教室自习{1\|2}小时 +{3\|5}
-2.	考试六科成绩
+1. 申请星期天下午在教室自习{1|2}小时 +{3|5}
+2. 考试六科成绩
     - 600分以上 +20
     - 580-600分 +10
     - 第一名 +5
     - 第二名 +3
     - 第三名 +1
 
-3.	进步奖
+3. 进步奖
     - 第一名 +10
     - 第二名 +8
     - 第三四五名 +6
-4.	单科王 +3
-5.	班委 +5/月
-6.	值日生 +3/月
-7.	六科课代表 +6/(科\*月)
-8.	三科课代表	+2/(科\*月)
-9.	参加大型活动{校\|县\|市\|省} +{5\|10\|15\|20}
-10.	老师表扬三次 +5
+4. 单科王 +3
+5. 班委 +5/月
+6. 值日生 +3/月
+7. 六科课代表 +6/(科\*月)
+8. 三科课代表 +2/(科\*月)
+9. 参加大型活动{校|县|市|省} +{5|10|15|20}
+10. 老师表扬三次 +5
 
 ### 执行篇
 
-1.	1分等于1个草稿本或1支笔芯
-2.	可以用人民币代替实物处罚,1元换1分
-3.	值日生1.5倍扣分
-4.	班委或九科课代表不作为或乱作为 -3
-5.	每周统计1次,在统计结果公布2天内上交处罚物品
-6.	未及时上交惩罚物品者双倍处罚
+1. 1分等于1个草稿本或1支笔芯
+2. 可以用人民币代替实物处罚,1元换1分
+3. 值日生1.5倍扣分
+4. 班委或九科课代表不作为或乱作为 -3
+5. 每周统计1次,在统计结果公布2天内上交处罚物品
+6. 未及时上交惩罚物品者双倍处罚
 
 ## 附录
 
