Fix some problems in rules

--- a/history/rules/r1.md
+++ b/history/rules/r1.md
@@ -31,7 +31,7 @@
 
 ### 奖励篇
 
-1. 申请星期天下午在教室自习{1|2}小时 +{3|5}
+1. 申请星期天下午在教室自习{1\|2}小时 +{3\|5}
 2. 考试六科成绩
     - 600分以上 +20
     - 580-600分 +10
@@ -48,7 +48,7 @@
 6. 值日生 +3/月
 7. 六科课代表 +6/(科\*月)
 8. 三科课代表 +2/(科\*月)
-9. 参加大型活动{校|县|市|省} +{5|10|15|20}
+9. 参加大型活动{校\|县\|市\|省} +{5\|10\|15\|20}
 10. 老师表扬三次 +5
 
 ### 执行篇
