--- a/history/rules/r3.md
+++ b/history/rules/r3.md
@@ -5,77 +5,77 @@
 ### 个人处罚
 
 - **校级违纪**
-  - 1. 不穿校服 -0.5
-  - 2. 其它未列入本表的违纪
+  - 1 不穿校服 -0.5
+  - 2 其它未列入本表的违纪
     - 情节轻微 -0.5
     - 一般情况 -1
 - **出勤**
-  - 3. 迟到 早退 缺请假条 -2
-  - 4. 旷课 -3
+  - 3 迟到 早退 缺请假条 -2
+  - 4 旷课 -3
 - **一般违纪**
-  - 5. 不按要求完成 晨读/早自习/眼保健操  -2
-  - 6. 上课随意移动  -2
-  - 7. 上课讲话  -2
-  - 8. 上课睡觉  -3
-  - 9. 小型测试作弊  -5
-  - 10. 携带食品  -3
-  - 11. 上课吃东西  -3
+  - 5 不按要求完成 晨读/早自习/眼保健操  -2
+  - 6 上课随意移动  -2
+  - 7 上课讲话  -2
+  - 8 上课睡觉  -3
+  - 9 小型测试作弊  -5
+  - 10 携带食品  -3
+  - 11 上课吃东西  -3
 - **卫生**
-  - 12. 未进行日常小扫除 大扫除擅自离岗  -3
-  - 13. 卫生未打扫干净  -2
+  - 12 未进行日常小扫除 大扫除擅自离岗  -3
+  - 13 卫生未打扫干净  -2
 - **其它**  
-  - 14. 班委或九科课代表不作为或乱作为  -3
-  - 15. 作业未完成 作业态度不端正  -(3~5)
-  - 16. 被老师批评
+  - 14 班委或九科课代表不作为或乱作为  -3
+  - 15 作业未完成 作业态度不端正  -(3~5)
+  - 16 被老师批评
     - 基准扣分  -3
     - 指定范围  -(1~5)
-  - 17. 顶撞老师  -5
-  - 18. 顶撞班委  -2
-  - 19. 晚上放学后未打凳子  -1
-  - 20. 故意干扰计算机控制  -(1~5)
+  - 17 顶撞老师  -5
+  - 18 顶撞班委  -2
+  - 19 晚上放学后未打凳子  -1
+  - 20 故意干扰计算机控制  -(1~5)
 
 ### 个人奖励
 
 - **每月奖励**
-  - 21. 班委  +5
-  - 22. 值日生  +3
-  - 23. 六科课代表  +6/科
-  - 24. 三科课代表  +2/科
-  - 25. 自习管理员  +3
+  - 21 班委  +5
+  - 22 值日生  +3
+  - 23 六科课代表  +6/科
+  - 24 三科课代表  +2/科
+  - 25 自习管理员  +3
 - **考试奖励**
-  - 26. 六科成绩
+  - 26 六科成绩
     - 600+  +20
     - 580~600  +10
     - 1st  +5
     - 2nd  +3
     - 3rd  +1
-  - 27. 进步奖
+  - 27 进步奖
     - 1st  +10
     - 2nd  +8
     - 3rd~5th  +6
-  - 28. 单科王  +3
+  - 28 单科王  +3
 - **其它**  
-  - 29. 申请星期天下午在教室自习
+  - 29 申请星期天下午在教室自习
     - 1h  +3
     - 2h  +5
-  - 30. 参加大型活动
+  - 30 参加大型活动
     - 校  +5
     - 县  +10
     - 市  +15
     - 省  +20
-  - 31. 被老师表扬
+  - 31 被老师表扬
     - 基准加分  +1.5
     - 指定范围  +(0~5)
 
 ### 组
 
 - **扣分**  
-  - 32. 垃圾未被清理  -(0.5~1.5)/个
-  - 33. 被老师批评
+  - 32 垃圾未被清理  -(0.5~1.5)/个
+  - 33 被老师批评
     - 基准扣分  -3
     - 指定范围  -(1~5)
 - **加分**  
-  - 34. 被老师表扬
+  - 34 被老师表扬
     - 基准加分  +1
     - 指定范围 +(0~5)
 
@@ -89,7 +89,7 @@
 6. 被学校或年级组发现的违纪有额外扣分(不计入本篇第4条双倍扣分)
     > 一周内被学校或年级组发现的违纪中的第n次额外扣分的计算公式为
     >
-    > |P|=3(n-1) (n∈N\*)
+    > \|P\| = 3(n-1) (n∈N\*)
 7. 个人惩罚每周统计1次,在统计结果公布2天内上交处罚物品
 8. 个人奖励每月统计1次
 9. 组奖罚每月统计1次,加扣分可以等额抵消
@@ -211,11 +211,11 @@
 ### 英语
 
 1. 听(默)写连续不过关扣分公式如下:
-    > |P| = 0, n∈{2,3,4}
+    > \|P\| = 0, n∈{2,3,4}
     >
-    > |P| = n-3, n∈{5,6,7}
+    > \|P\| = n-3, n∈{5,6,7}
     >
-    > |P| = 5, n∈{8,9,⋯}
+    > \|P\| = 5, n∈{8,9,⋯}
 2. 若听(默)写连续5次满分,可以让当天Check的同学满足自己一次合情合理合法的要求并重新计数
 
 ### 生物
